Correction of overflow

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+html{
   margin: 0;
   border: 0;
   background-color: #1d1d1d;
